--- a/src/main/resources/templates/advert/advertUnitForm.html
+++ b/src/main/resources/templates/advert/advertUnitForm.html
@@ -12,13 +12,39 @@
 	<h2>Spring Boot Adverts</h2>
 
 	<form th:object="${advert}" method="post">
-		<label for="model">model:</label> <select th:field="*{model}">
-			<option value="">--</option>
-			<option th:each="part:${allModels}" th:value="${{part}}" th:text="${part}">Wireframe</option>
+		<label for="model">model:</label> 
+        <select th:field="*{model.id}">
+			<option 
+                th:each="part : ${allModels}" 
+                th:value="${part.id}" 
+                th:text="${part}">
+            </option>
 		</select><br /> <label for="productionYear">production year:</label> <input	type="text" th:field="*{productionYear}"></input><br /> 
-		<label for="engineCapacity">engine capacity:</label> <input type="text"	th:field="*{engineCapacity}"></input><br /> 
-		<input type="submit"></input>
-
+		<label for="engineCapacity">engine capacity:</label> <input type="text"	th:field="*{engineCapacity}"></input><br/>        
+            
+        <div>
+            <label>Prices</label>
+            <table>
+              <thead>
+                <tr>
+                  <th>Row</th>
+                  <th>Date</th>
+                  <th>Price</th>                  
+                  <th><button type="submit" name="addPrice">Add price</button></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr th:each="price,priceStat : *{prices}">
+                  <td th:text="${priceStat.count}">1</td>
+                  <td><input type="text" th:field="*{prices[__${priceStat.index}__].date}"/></td>
+                  <td><input type="text" th:field="*{prices[__${priceStat.index}__].price}"/></td>
+                  <td><button type="submit" name="removePrice" th:value="${priceStat.index}">Remove price</button></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>    
+         
+        <button type="submit" name="saveAdvert">Save</button>
 	</form>
 
 	<div id="footer" th:include="page :: footer"></div>
