--- a/src/main/resources/templates/model/modelListForm.html
+++ b/src/main/resources/templates/model/modelListForm.html
@@ -9,16 +9,19 @@
 <body>
 	<div id="header" th:include="page :: header"></div>
 
-	<h1>Spring Boot Adverts</h1>
+    <h1>Spring Boot Adverts</h1>
 
-	<a href="" th:href="@{/model/new}">Add new</a>
+    <form th:action="@{/model/new}">
+        <button type="submit">Add new</button>
+    </form>
 
-	<ul th:each="model : ${models}">
-		<li><a href="" th:href="@{/model/}+${model.id}">
-			<span th:text="${model.brand}">brand</span> <span th:text="${model.nomination}">model</span>			  
-		</a></li>
-	</ul>
+    <ul th:each="model : ${models}">
+        <li><a href="" th:href="@{/model/}+${model.id}"> <span
+                th:text="${model.brand}">brand</span> <span
+                th:text="${model.nomination}">model</span>
+        </a></li>
+    </ul>
 
-	<div id="footer" th:include="page :: footer"></div>
+    <div id="footer" th:include="page :: footer"></div>
 </body>
 </html>
