--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<link href="../static/css/main.css" th:href="@{/css/main.css}"
+<link href="../static/css/main.css" th:href="../static/css/main.css"
 	rel="stylesheet" />
 </head>
 
