--- a/src/main/resources/templates/model/modelListForm.html
+++ b/src/main/resources/templates/model/modelListForm.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Spring Boot Adverts</title>
-<link href="../static/css/main.css" th:href="@{/css/main.css}"
+<link href="../../static/main.css" th:href="@{/main.css}"
 	rel="stylesheet" />
 </head>
 
