--- a/src/main/resources/templates/advert/advertListForm.html
+++ b/src/main/resources/templates/advert/advertListForm.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Spring Boot Adverts</title>
-<link href="../static/css/main.css" th:href="@{/css/main.css}"
+<link href="../../static/main.css" th:href="@{/main.css}"
 	rel="stylesheet" />
 </head>
 
@@ -10,19 +10,39 @@
 	<div id="header" th:include="page :: header"></div>
 
     <h1>Spring Boot Adverts</h1>
+    <h3 th:if="${#vars['flash.message']}" th:text="${#vars['flash.message']}"></h3>
 
     <form th:action="@{/advert/new}">
         <button type="submit">Add new</button>
     </form>
 
-    <ul th:each="advert : ${adverts}">
-		<li><a href="" th:href="@{/advert/}+${advert.id}"><span
-				th:text="${advert.model}">model</span>: <span
-				th:text="${advert.productionYear}">production year</span> : <span
-				th:text="${advert.engineCapacity}">engine capacity</span> 
-		</a></li>
-	</ul>
+	<div class="flex-container">
+	    <ul th:each="advert : ${adverts}">
+			<li>					
+				<div class="flex-element">
+					<a href="" th:href="@{/advert/}+${advert.id}">
+						<img src="" th:src= "${advert.getImage() == null} ? '/images/auto-default.png': *{'/img/' + advert.id}" class="img-responsive center-block" width=300 height=230>	
+					</a>
+					<div class="text-left">
+						<div>
+							<a href="" th:href="@{/advert/}+${advert.id}" class="auto-name">
+								<span th:text= "${advert.model} +' '+ ${advert.productionYear}" class="auto-name">Brand Model Prodaction year</span>
+							</a>
+							<span class="auto-short-description" th:text= ${advert.engineCapacity}>face discription</span>
+						</div>
+						<span class="auto-short-price-n" style="margin:-19px 0 -12px;">
+							<span class="price">649 000</span>p
+						</span>
+					</div>
+				</div>
+			
+			</li>
+		</ul>
+	</div>
+	
+		
 
+	
 	<div id="footer" th:include="page :: footer"></div>
 </body>
 </html>
