--- a/src/main/resources/templates/model/modelUnitForm.html
+++ b/src/main/resources/templates/model/modelUnitForm.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Spring Boot Adverts</title>
-<link href="../static/css/main.css" th:href="@{/css/main.css}"
+<link href="../../static/main.css" th:href="@{/main.css}"
 	rel="stylesheet" />
 </head>
 
@@ -17,6 +17,7 @@
       <label for="nomination">nomination:</label>
       <input type="text" th:field="*{nomination}"></input><br/>
       <input type="submit"></input>
+      <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
     </form>
 
 	<div id="footer" th:include="page :: footer"></div>
