--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<link href="../static/css/main.css" th:href="../static/css/main.css"
+<link href="../static/main.css" th:href="@{/main.css}"
 	rel="stylesheet" />
 </head>
 
@@ -14,6 +14,10 @@
 						<li><a th:href="@{/advert}">Adverts</a></li>
 						<li><a th:href="@{/model}">Models</a></li>
 					</ul></li>
+				<li><a href="#">Operations</a>
+					<ul class="submenu">
+						<li><a th:href="@{/parse}">Permit parse</a></li>
+					</ul></li>	
 				<li><a href="#">About</a></li>
 			</ul>
 		</nav>
