--- a/src/main/resources/templates/model/modelUnitForm.html
+++ b/src/main/resources/templates/model/modelUnitForm.html
@@ -14,9 +14,9 @@
 	<form th:object="${model}" method="post">
       <label for="brand">brand:</label>
       <input type="text" th:field="*{brand}"></input><br/>
-      <label for="nomination">nomination:</label>
-      <input type="text" th:field="*{nomination}"></input><br/>
-      <input type="submit"></input>
+      <label for="title">Model:</label>
+      <input type="text" th:field="*{title}"></input><br/>
+      <input type="submit" value = "Save and close"></input>
       <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
     </form>
 
