--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -13,6 +13,7 @@
 					<ul class="submenu">
 						<li><a th:href="@{/advert}">Adverts</a></li>
 						<li><a th:href="@{/model}">Models</a></li>
+						<li><a th:href="@{/plan}">Parsing plan</a></li>						
 					</ul></li>
 				<li><a href="#">Operations</a>
 					<ul class="submenu">
@@ -26,7 +27,6 @@
 	<div>Content goes here</div>
 
 	<div th:fragment="footer">
-		View: <span th:text="${springViewName}">unknown</span>
 	</div>
 
 </body>
