--- a/src/main/resources/templates/plan/parsingPlanUnitForm.html
+++ b/src/main/resources/templates/plan/parsingPlanUnitForm.html
@@ -16,22 +16,31 @@
 			<option th:each="availableModel : ${allModels}" th:value="${availableModel.id}"
 				th:text="${availableModel}"></option>
 		</select>
-		<br />
+		<br>
+		<br>
+		
 		<input type="hidden" name="id" th:field="*{id}"/>
 		
 		<label for="active">active:</label> 
 		<input type="checkbox" th:field="*{active}"></input>
-		<br /> 
+		<br>
+		<br> 
 		
 		<label for="pathToAdvert">path to advert:</label> 
 		<input type="text" size="100" th:field="*{pathToAdvert}"></input>
-		<br /> 
+		<br>
+		<br>
+		
+		<label for="lastInvoke">last update:</label>
+		<input type="datetime-local" th:field="*{lastInvoke}" /> 
+		<br>
+		<br>
 		
 		<label for="url">url:</label>
 		<textarea th:field="*{url}" rows = "5" style="width: 727px;"></textarea>
-		<br/>		
-
 		<br>
+		<br>		
+
 		<button type="submit">Save and close</button>
 		<input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
 	</form>
